add new proyecto of a new page

--- a/Usuario.html/registro.html
+++ b/Usuario.html/registro.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Prendas de ropa, Prendas de la marca Shein 100% originales">
+    <meta name="title" content="Lotus Flower prendas originales de Shein">
+    <meta name="keywords" content="Prendas, Shein, , Blusas">
+    <link rel="author" href=""ENLACE DE LINKEDIN>
     <link rel="icon" href="img/lotus.png" type="image/png">
-    <title>login</title>
+    <title>Registro</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f579496da0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/style.css"
+    <link rel="stylesheet" href="/css/estilo.css">
 </head>
 <body>
     <header>
@@ -21,22 +25,23 @@
     </header>
     <form class="formulario">
         <img src="/img/lotus (1).png" alt="">
-        <h1>Iniciar Sesion</h1>
+        <h1>Registrate</h1>
         <div class="contenedor">
             <div class="input-contenedor">
                 <i class="fa-solid fa-envelope icon"></i>
-                <input type="text" placeholder="Correo Electronico">
+                <label for=""></label>
+                <input type="text" placeholder="Correo Electronico" autofocus required>
+
+                
             </div>
             <div class="input-contenedor">
                 <i class="fa-solid fa-key icon"></i>
-                <input type="password" placeholder="Contraseña">
+                <input type="password" placeholder="Contraseña" required>
             </div>
-          <input type="submit" value="Iniciar Sesion" class="button">
-          <p>Al iniciar sesion aceptas nuestras condiciones y la politica de privacidad</p>
-          <p>¿No tienes una cuenta? <a class="link" href="/Usuario.html/registro.html" >Registrarse</a></p>
+          <input type="submit" value="Registrate" class="button" >
+          <p>Al registrarte aceptas nuestras condiciones y la politica de privacidad</p>
+          <p>¿Ya tienes cuenta? <a class="link" href="/Usuario.html/login.html" >Iniciar Sesion</a></p>
         </div>
-
-
 </form>
 </body>
 </html>
