add new updates of css

--- a/html/Login.html
+++ b/html/Login.html
@@ -8,19 +8,19 @@
     <title>login</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f579496da0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/style.css"
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
         <h2>Lotus Flower</h2>
         <div class="inicio">
-            <a href="/index.html">Inicio</a>
-            <a href="/Usuario.html/registro.html">Sing up</a>
-            <a href="/Usuario.html/login.html">Sing in</a>
+            <a href="../index.html">Inicio</a>
+            <a href="../html/registro.html">Sing up</a>
+            <a href="../html/Login.html">Sing in</a>
         </div>
     </header>
     <form class="formulario">
-        <img src="/img/lotus (1).png" alt="">
+        <img src="../img/lotus (1).png" alt="">
         <h1>Iniciar Sesion</h1>
         <div class="contenedor">
             <div class="input-contenedor">
@@ -33,7 +33,7 @@
             </div>
           <input type="submit" value="Iniciar Sesion" class="button">
           <p>Al iniciar sesion aceptas nuestras condiciones y la politica de privacidad</p>
-          <p>¿No tienes una cuenta? <a class="link" href="/Usuario.html/registro.html" >Registrarse</a></p>
+          <p>¿No tienes una cuenta? <a class="link" href="../html/registro.html" >Registrarse</a></p>
         </div>
 
 
