--- a/html/registro.html
+++ b/html/registro.html
@@ -12,19 +12,19 @@
     <title>Registro</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f579496da0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
 </head>
 <body>
     <header>
         <h2>Lotus Flower</h2>
         <div class="inicio">
-            <a href="/index.html">Inicio</a>
-            <a href="/Usuario.html/registro.html">Sing up</a>
-            <a href="/Usuario.html/login.html">Sing in</a>
+            <a href="../index.html">Inicio</a>
+            <a href="../html/registro.html">Sing up</a>
+            <a href="../html/Login.html">Sing in</a>
         </div>
     </header>
     <form class="formulario">
-        <img src="/img/lotus (1).png" alt="">
+        <img src="../img/lotus (1).png" alt="">
         <h1>Registrate</h1>
         <div class="contenedor">
             <div class="input-contenedor">
@@ -40,7 +40,7 @@
             </div>
           <input type="submit" value="Registrate" class="button" >
           <p>Al registrarte aceptas nuestras condiciones y la politica de privacidad</p>
-          <p>¿Ya tienes cuenta? <a class="link" href="/Usuario.html/login.html" >Iniciar Sesion</a></p>
+          <p>¿Ya tienes cuenta? <a class="link" href="../html/Login.html" >Iniciar Sesion</a></p>
         </div>
 </form>
 </body>
