add media querys

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <img src="img/blusa1.jpg" alt="">
                         <p class="descripcion">Blusa de cuero</p>
                         <p class="precio">$30.000</p>
-                        <a href="#">Agragar al carrito</a>
+                        <a href="#">Agregar al carrito</a>
                     </div>
                 </div>
                 <div class="item">
@@ -66,7 +66,7 @@
                         <img src="img/blusa3.jpeg" alt="">
                         <p class="descripcion">Blusa verde</p>
                         <p class="precio">$50.000</p>
-                        <a href="#">Agragar al carrito</a>
+                        <a href="#">Agregar al carrito</a>
                     </div>
                 </div>    
                 <div class="item">
@@ -74,7 +74,7 @@
                         <img src="img/pantalon1.jpg" alt="">
                         <p class="descripcion">Pantalon Azul</p>
                         <p class="precio">$110.000</p>
-                        <a href="#">Agragar al carrito</a>
+                        <a href="#">Agregar al carrito</a>
                     </div>
                 </div>    
                 <div class="item">
@@ -82,7 +82,7 @@
                         <img src="img/vestido1.jpeg" alt="">
                         <p class="descripcion">Vestido Cuadricula</p>
                         <p class="precio">$80.000</p>
-                        <a href="#">Agragar al carrito</a>
+                        <a href="#">Agregar al carrito</a>
                     </div>
                 </div>    
                 <div class="item">
@@ -90,7 +90,7 @@
                         <img src="img/maquillaje.jpeg" alt="">
                         <p class="descripcion">Maquillaje Variado</p>
                         <p class="precio">$20.000</p>
-                        <a href="#">Agragar al carrito</a>
+                        <a href="#">Agregar al carrito</a>
                     </div>
                 </div>    
                 <div class="item">
@@ -98,7 +98,7 @@
                         <img src="img/maquillaje2.jpeg" alt="">
                         <p class="descripcion">Corrector y base</p>
                         <p class="precio">$15.000</p>
-                        <a href="#">Agragar al carrito</a>
+                        <a href="#">Agregar al carrito</a>
                     </div>
                 </div>    
             </div>
