add updates od media queries

--- a/html/Login.html
+++ b/html/Login.html
@@ -18,6 +18,7 @@
             <a href="../html/registro.html">Sing up</a>
             <a href="../html/Login.html">Sing in</a>
         </div>
+        
     </header>
     <form class="formulario">
         <img src="../img/lotus (1).png" alt="">
@@ -38,5 +39,6 @@
 
 
 </form>
+<script src="../js/myjs.js"></script>
 </body>
 </html>
