--- a/html/registro.html
+++ b/html/registro.html
@@ -24,9 +24,8 @@
 
         <nav class="inicio">
            <ul class="ul">
-              <li class="li"><a href="../index.html" class="a"></a>Inicio</li>
-              <li class="li"><a href="../html/registro.html" class="a"></a>Sing up</li>
-              <li class="li"><a href="../html/Login.html" class="a"></a>Sing in</li>
+            <li class="li"><a href="../index.html" class="a">Inicio</a></li>
+            <li class="li"><a href="../html/Login.html" class="a">Sing in</a></li>
            </ul>
         </nav>
     </header>
