--- a/html/productos.html
+++ b/html/productos.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Productos</title>
+    <link rel="icon" href="img/lotus (1).png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f579496da0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/produc.css">
