fix bugs of URL

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                     <div id="header">
                         <ul class="nav">
                             <li><a href="index.html">Inicio</a></li>
-                            <li><a href="/html/productos.html">Productos</a>
+                            <li><a href="./html/productos.html">Productos</a>
                                 <ul>
-                                    <li><a href="/html/productos.html">Blusas</a></li>
-                                    <li><a href="/html/productos.html">Pantalones</a></li>
-                                    <li><a href="/html/productos.html">Maquillaje</a></li>
+                                    <li><a href="./html/productos.html">Blusas</a></li>
+                                    <li><a href="./html/productos.html">Pantalones</a></li>
+                                    <li><a href="./html/productos.html">Maquillaje</a></li>
                                 </ul>
                             </li>
                             <li><a href="#">Usuario</a>
@@ -142,7 +142,7 @@
                             <img src="./img/pantalones-de-pierna-de-bota.png" alt="">
                         </div>
                         <div class="link-producto">
-                            <a href="/html/productos.html"    class="tipo">Pantalon</a>
+                            <a href="/html/productos.html"    class="tipo">Pantalones</a>
                         </div>
                         
                     </div>
