--- a/html/productos.html
+++ b/html/productos.html
@@ -18,7 +18,7 @@
                     <h1> Lotus Flower</h1>
                 </div>
                 <div class="icon">
-                    <img src="img/lotus (2).png" alt="">
+                    <img src="../img/lotus (2).png" alt="">
                 </div>
             </div>
             
