--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     </section>
     <section class="contenido">
         <div class="mostrador" id="mostrador">
+            <img src="img/Ilustración de Flores Fucsia Primavera Ropa de Temporada.png" alt="">
             <div class="ropa">
                 <div class="item">
                     <div class="contenedor-foto">
