fix bugs of links

--- a/html/productos.html
+++ b/html/productos.html
@@ -28,9 +28,9 @@
                             <li><a href="../index.html">Inicio</a></li>
                             <li><a href="#">Productos</a>
                                 <ul>
-                                    <li><a href="#">Blusas</a></li>
-                                    <li><a href="#">Pantalones</a></li>
-                                    <li><a href="#">Maquillaje</a></li>
+                                    <li><a href="#Blusas">Blusas</a></li>
+                                    <li><a href="#Pantalones">Pantalones</a></li>
+                                    <li><a href="#Maquillaje">Maquillaje</a></li>
                                 </ul>
                             </li>
                             <li><a href="#">Usuario</a>
