--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
     <section class="contenido">
         <div class="mostrador" id="mostrador">
-            <img src="./img/Ilustración de Flores Fucsia Primavera Ropa de Temporada.png">
+            <img src="./img/img5.png" alt="Productos en descuentos">
             <div class="ropa">
                 <div class="item">
                     <div class="contenedor-foto">
